[package]
name = "aziot-common"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false
description = """
The common code used for Identity Service, Key Service and Certificate Service.
"""
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12"
config = { version = "0.9", default-features = false, features = ["toml"] }
env_logger = "0.7"
failure = "0.1"
log = "0.4"
regex = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
url = "1.7"
url_serde = "0.2"
