[package]
name = "aziot-identityd"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false
description = """
The code used for Identity Service.
"""
edition = "2018"

[dependencies]
clap = "2.31"
config = { version = "0.9", default-features = false, features = ["toml"] }
env_logger = "0.5"
hyper = "0.12"
failure = "0.1"
futures-util = { version = "0.3", features = [] }
log = "0.4"
tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
url = "1.7"
url_serde = "0.2"

aziot-common = { path = "../../common/aziot-common" }

[dev-dependencies]
test-case = "1.0.0"